@@ -25,9 +25,13 @@ Do not query the BTS for already tagged or not owned bugs, that is, force all
 bugs to be tagged, even if they are already tagged or (worse still) belong to
 another source package.
 .TP
-.BR \-c ". " \-\-confirm
+.BR \-c ", " \-\-confirm
 For each bug tagged as pending, also tag it as confirmed.
 .TP
+.TP
+.BR \-t ", " \-\-to \fIversion\f
+Use changelog information from all versions strictly later than
+\fIversion\f (mimics dpkg-parsechangelog's -v option.)
 .BR \-w ", " \-\-wnpp
 For each potentially not owned bug, check whether it is filed against wnpp
 and, if so, tag it. This allows e.g. ITA or ITPs to be tagged.
